using the proper pluralisatoin through glossaries

--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -36,7 +36,7 @@ A partial or incomplete sweep occurs when part way through a sweep the selective
 
 In order to determine if a selective event has occurred, one can attempt to find what are termed “signatures of selection”. Population differentiation can sometimes be indicative of a selective event. If extreme levels of differentiation are observed at a locus between populations, this can be interpreted as evidence of positive selection. Regions of the genome that have a reduction in variability in a population can be the effect of a selective sweep. A third example of a signature of selection are deviations in the frequency spectrum for alleles beyond what would be considered possible under neutrality [@Przeworski2002]. A key signature of positive selection is the increase in proportion of high frequency variants [@fay2000hitchhiking].
 
-Assuming a background of neutrality means that there needs to be a way to identify variants under selection as opposed to population demographics, such as bottlenecks or expansions. In the case of Polynesian settlement, there is evidence for a founder effect which will need to be considered when interpreting selection results [@Kayser2006a]. It is for this reason that the unique features of a selective event need to be able to be identified from other possible features such as population demography or admixture. Population events and demography affect the entire genome, whereas selection acts on a localised region [@Stajich2005]. To be able to recreate demography, the choice in the \gls{snp}s used is important as there is chance for a large ascertainment bias if \gls{snp}s are only selected from a small number of populations [@Wall2008]. The \gls{snp}s used also need to be sampled away from genic areas.
+Assuming a background of neutrality means that there needs to be a way to identify variants under selection as opposed to population demographics, such as bottlenecks or expansions. In the case of Polynesian settlement, there is evidence for a founder effect which will need to be considered when interpreting selection results [@Kayser2006a]. It is for this reason that the unique features of a selective event need to be able to be identified from other possible features such as population demography or admixture. Population events and demography affect the entire genome, whereas selection acts on a localised region [@Stajich2005]. To be able to recreate demography, the choice in the \glspl{snp} used is important as there is chance for a large ascertainment bias if \glspl{snp} are only selected from a small number of populations [@Wall2008]. The \glspl{snp} used also need to be sampled away from genic areas.
 
 ## Methods
 
@@ -133,11 +133,11 @@ The frequency spectrum methods are based on finding deviations in the frequency 
 
 #### Tajima's _D_
 
-Tajima's _D_ [@Tajima1989] counts the number of segregating sites of individuals in a population and finds the ratio between polymorphisms and pair-wise individual comparisons. Tajima's _D_ is a test of the neutral hypothesis. The hypothesis is rejected when there is an excess of low frequency variants. A negative Tajima's _D_ is indicative of positive selection or weak negative selection but a negative value can also be attributed to population events such as populationexpansion. Positive values of Tajima's _D_ indicate an excess of intermediate frequency variants. An excess of intermediate frequency variants could also be attributed to balancing selection, population structure, or population bottlenecks [@Kreitman2000; @Nielsen2005; @nielsen2007recent]. The comparison of other polymorphisms, such as changes in \gls{snp}s vs changes in \gls{indel} numbers can provide further evidence for either selection or a population event, since population events should affect both \gls{snp}s and \gls{indel}s in an equal fashion. The direction of Tajima's _D_ after a population bottleneck depends on the strength and duration of the bottleneck and can generate similar Tajima's _D_ values that can be positive, negative or zero [@Fay1999]. After a population reduction or selective event it is expected the population will have excess rare alleles (recent, low frequency) as the population recovers, therefore Tajima's _D_ will be negative [@Barton1998]. Tajima's _D_ is sensitive to sequencing errors because they appear equivalent to low frequency variants [@Achaz2008].
+Tajima's _D_ [@Tajima1989] counts the number of segregating sites of individuals in a population and finds the ratio between polymorphisms and pair-wise individual comparisons. Tajima's _D_ is a test of the neutral hypothesis. The hypothesis is rejected when there is an excess of low frequency variants. A negative Tajima's _D_ is indicative of positive selection or weak negative selection but a negative value can also be attributed to population events such as populationexpansion. Positive values of Tajima's _D_ indicate an excess of intermediate frequency variants. An excess of intermediate frequency variants could also be attributed to balancing selection, population structure, or population bottlenecks [@Kreitman2000; @Nielsen2005; @nielsen2007recent]. The comparison of other polymorphisms, such as changes in \glspl{snp} vs changes in \gls{indel} numbers can provide further evidence for either selection or a population event, since population events should affect both \glspl{snp} and \glspl{indel} in an equal fashion. The direction of Tajima's _D_ after a population bottleneck depends on the strength and duration of the bottleneck and can generate similar Tajima's _D_ values that can be positive, negative or zero [@Fay1999]. After a population reduction or selective event it is expected the population will have excess rare alleles (recent, low frequency) as the population recovers, therefore Tajima's _D_ will be negative [@Barton1998]. Tajima's _D_ is sensitive to sequencing errors because they appear equivalent to low frequency variants [@Achaz2008].
 
 #### Fay and Wu's _H_
 
-Fay and Wu's _H_ is sensitive to \gls{snp}s rising to moderate to high frequency and uses an out group to determine the derived/ancestral state of the allele. A positive value indicates a deficit in derived moderate to high frequency \gls{snp}s. A negative value indicates an excess of derived moderate to high frequency \gls{snp}s. Fay and Wu's _H_ rejects neutrality when there is an excess of high but not low frequency variants. An increase in the proportion of high frequency variants compared to intermediate frequency variants is a unique signature of positive selection [@fay2000hitchhiking]. Fay and Wu's _H_ can be used in regions of low recombination to distinguish hitch-hiking from neutral or background selection where it is expected there will be the same level of intermediate to high frequency variants.
+Fay and Wu's _H_ is sensitive to \glspl{snp} rising to moderate to high frequency and uses an out group to determine the derived/ancestral state of the allele. A positive value indicates a deficit in derived moderate to high frequency \glspl{snp}. A negative value indicates an excess of derived moderate to high frequency \glspl{snp}. Fay and Wu's _H_ rejects neutrality when there is an excess of high but not low frequency variants. An increase in the proportion of high frequency variants compared to intermediate frequency variants is a unique signature of positive selection [@fay2000hitchhiking]. Fay and Wu's _H_ can be used in regions of low recombination to distinguish hitch-hiking from neutral or background selection where it is expected there will be the same level of intermediate to high frequency variants.
 
 #### F~ST~
 
@@ -164,7 +164,7 @@ hitch-hiking selection along a recombining chromosome. It calculates a null dist
 
 #### Cross Population Composite Likelihoods ratio
 
-The cross population composite likelihoods ratio (XP-CLR) is an extension of the \gls{clr} test developed by @Nielsen2009 that scans for multi-locus allele frequency differentiation between two populations and then tests if these frequency differences are too young to be consistent with neutrality based on the \gls{ld} on the region [@Chen2010]. A down-weighting of \gls{snp}s that are in perfect or high \gls{ld} is performed because they essentially provide the same information. By doing this it is hoped that false positives are reduced, since the correlation of marginal likelihood terms in the composite likelihood function is often overlooked and leads to false positives. Normalised XP-CLR scores should be resistant to variation in demographic events, however a conservative approach of using rank-order of scores across the genome is usually taken. Unlike single population \gls{clr} and similar to \gls{xpehh}, XP-CLR is resistant to \gls{snp} ascertainment bias because population differentiation is not affected by ascertainment bias. There is also a strong correlation between genes identified with XP-CLR and \gls{xpehh}. XP-CLR is also considered an extension of F~ST~ and is beginning to be used as a replacement for investigating selection in animal studies (Cattle – @Lee2014; Goats - @Benjelloun2015)
+The cross population composite likelihoods ratio (XP-CLR) is an extension of the \gls{clr} test developed by @Nielsen2009 that scans for multi-locus allele frequency differentiation between two populations and then tests if these frequency differences are too young to be consistent with neutrality based on the \gls{ld} on the region [@Chen2010]. A down-weighting of \glspl{snp} that are in perfect or high \gls{ld} is performed because they essentially provide the same information. By doing this it is hoped that false positives are reduced, since the correlation of marginal likelihood terms in the composite likelihood function is often overlooked and leads to false positives. Normalised XP-CLR scores should be resistant to variation in demographic events, however a conservative approach of using rank-order of scores across the genome is usually taken. Unlike single population \gls{clr} and similar to \gls{xpehh}, XP-CLR is resistant to \gls{snp} ascertainment bias because population differentiation is not affected by ascertainment bias. There is also a strong correlation between genes identified with XP-CLR and \gls{xpehh}. XP-CLR is also considered an extension of F~ST~ and is beginning to be used as a replacement for investigating selection in animal studies (Cattle – @Lee2014; Goats - @Benjelloun2015)
 
 #### Composite of Multiple Signals
 
@@ -202,13 +202,13 @@ In order to use haplotypic methods requires being able to construct the haplotyp
 
 \Gls{gwas} are a method to scan genomes, usually \gls{snp} data, for association with a phenotype. The strength of GWAS is that prior knowledge of loci is not required and loci are treated with an unbiased nature for the association test. \Gls{gwas}, because of the large number of association tests, require large cohorts of samples to achieve sufficient power for statistical significance. As the effect size for a variant decreases, larger sample sizes are also needed as power is proportional to the square of the effect size [@Korte2013; @Hemani2013]. Limitations in recruiting sufficient numbers of participants for \gls{gwas} therefore requires new ways of increasing power to detect smaller effects without needing to increase sample size, as outlined in this section.
 
-The basis \gls{gwas} studies is to identify \gls{snp}s that are associated with differences in the mean of a trait. These studies don't necessarily identify the causal \gls{snp} but instead identify a marker for the causal variant, usually in \gls{ld}. @Fisher1919 showed that total genetic variance could be split into components of additive, dominance and epistatic effects. The additive component has been shown to contribute the most to the overall genetic variance with epistatic variance contributing little in an outbred population [@Hill2008]. Complex traits gain their complexity from being the sum of interactions from many small effect loci, or the product of non-additive interactions between loci and the environment making it challenging to find the exact contribution of a locus to a trait [@Fu2013a]. These small, true effect loci can end up non-significant, due to the noise in the data, but might be able to retrieved using methods that find non-additive effects.
+The basis \gls{gwas} studies is to identify \glspl{snp} that are associated with differences in the mean of a trait. These studies don't necessarily identify the causal \gls{snp} but instead identify a marker for the causal variant, usually in \gls{ld}. @Fisher1919 showed that total genetic variance could be split into components of additive, dominance and epistatic effects. The additive component has been shown to contribute the most to the overall genetic variance with epistatic variance contributing little in an outbred population [@Hill2008]. Complex traits gain their complexity from being the sum of interactions from many small effect loci, or the product of non-additive interactions between loci and the environment making it challenging to find the exact contribution of a locus to a trait [@Fu2013a]. These small, true effect loci can end up non-significant, due to the noise in the data, but might be able to retrieved using methods that find non-additive effects.
 
 The use of additional methods that capture additional loci with non-additive effects should be able to explain more of missing heritability. When the ratio of explained heritability to total heritability is < 1, it is defined as missing heritability [@Zuk2012]. Explained heritability is defined as the proportion of heritability or phenotypic variance explained by a collection of genetic variants. Total heritability is inferred from population data. Missing heritability infers there are additional loci that contribute to the phenotypic variance that are yet to be discovered. 
 
 ### Non-additive Variance
 
-The goal of being able to prioritise \gls{gwas} results by using additional information, such as incorporating \gls{ld} or selection statistics by using a weighting system to increase the power of a \gls{gwas}, has been suggested [@Ayodo2007; @Roeder2006]. The incorporation of selection statistics or a \gls{vgwas} results has the potential to inform \gls{gwas} since these extra results capture some of the non-additive effects and variance that may be influencing a locus. When \gls{ld} between observed \gls{snp}s and causal variants is high, greater power in \gls{gwas} can be achieved by focusing on searching for non-additive variance [@Hemani2013]. To attempt to capture this non-additive variance, \gls{vgwas} can be performed. This uses the phenotypic variance, instead of mean, in the phenotype by genotype regression model. This method captures not just additive effects but also alternative methods of genetic influence [@Pare2010]. Additional work is required to determine if it is gene-gene or gene-environment interactions that are the cause of this variation, such as a gene by gene or gene by environment interaction analysis focussing on the top results from the \gls{vgwas}.
+The goal of being able to prioritise \gls{gwas} results by using additional information, such as incorporating \gls{ld} or selection statistics by using a weighting system to increase the power of a \gls{gwas}, has been suggested [@Ayodo2007; @Roeder2006]. The incorporation of selection statistics or a \gls{vgwas} results has the potential to inform \gls{gwas} since these extra results capture some of the non-additive effects and variance that may be influencing a locus. When \gls{ld} between observed \glspl{snp} and causal variants is high, greater power in \gls{gwas} can be achieved by focusing on searching for non-additive variance [@Hemani2013]. To attempt to capture this non-additive variance, \gls{vgwas} can be performed. This uses the phenotypic variance, instead of mean, in the phenotype by genotype regression model. This method captures not just additive effects but also alternative methods of genetic influence [@Pare2010]. Additional work is required to determine if it is gene-gene or gene-environment interactions that are the cause of this variation, such as a gene by gene or gene by environment interaction analysis focussing on the top results from the \gls{vgwas}.
 
 Important issues to bear in mind when using \gls{vgwas} include the size of a dataset, imbalance between cases and controls, and test statistics becoming inflated when minor allele frequency is small [@Yang2012]. A large dataset is often needed in order to be able to detect small differences in variance between groups. Imbalance in the data can appear as too many cases or controls but also in allele frequency. If there are not enough samples in an affection or allele group then the test statistic gets inflated due to sampling bias. For rare alleles this can require very large sample sizes to compensate.
 
@@ -223,7 +223,7 @@ Significance of \gls{gwas} results is greatly increased when selection statistic
 
 ### Pathway Analysis
 
-Pathways have been hypothesised to be involved in the genic adaptation of populations since altering a gene in a biochemical pathway are likely to alter different genes in the same pathway [@Bigham2010].  The use of pathway analysis rather than focusing on individual \gls{snp}s is another way to increase the power of a \gls{gwas} [@Jia2011]. This increase in power is largely obtained through a reduction in dimensionality in ways that attempt to remove noise from the underlying biological signal. There are however limitations to the effectiveness of using such an approach, such as the selection of pathway database, density of \gls{snp}s per gene, or gene length and boundaries. 
+Pathways have been hypothesised to be involved in the genic adaptation of populations since altering a gene in a biochemical pathway are likely to alter different genes in the same pathway [@Bigham2010].  The use of pathway analysis rather than focusing on individual \glspl{snp} is another way to increase the power of a \gls{gwas} [@Jia2011]. This increase in power is largely obtained through a reduction in dimensionality in ways that attempt to remove noise from the underlying biological signal. There are however limitations to the effectiveness of using such an approach, such as the selection of pathway database, density of \glspl{snp} per gene, or gene length and boundaries. 
 
 ## Applications
 
@@ -247,7 +247,7 @@ Obesity is defined as a \gls{bmi} of >30 kg/m2 and is a contributing risk factor
 
 Type II diabetes is diagnosed by a fasting blood glucose of >7.0 mmol/L or 2-hr post blood glucose load of  >11.1 mmol/L [@Alberti1998]. The risk of developing T2D is strongly correlated with excess weight [@Rana2007]. The prevalence of diabetes is 13% in Polynesians and 7% in NZ M$\bar{a}$ori [@Health2013] compared to 5.5% in Europeans [@Winnard2013]. In New Zealand, the rate of diabetes is twice that in M$\bar{a}$ori compared to non-M$\bar{a}$ori, and the rate is 3.6 fold higher in Pacific compared to non-Pacific ethnicities. 
 
-There have been multiple loci associated with T2D [@Billings2010], however, @Chen2010 found no evidence for enrichment in selection for \gls{bmi}, but found significant enrichment for T2D. The genes associated with T2D have been found to be differentiated by population, however the individual \gls{snp}s are often not [@pickrell2009signals]. @Koh2014 identified 6 \gls{snp}s in or near 9 genes that had been reported as T2D associated and overlapped with evidence of positive selection in East Asian populations. Common variants that have been found in European populations associating with obesity don't replicate in the Samoan population [@Karns2012]. The non-replication of European variants in Polynesians and the high prevalence of obesity in Polynesians suggest there is likely to be 
+There have been multiple loci associated with T2D [@Billings2010], however, @Chen2010 found no evidence for enrichment in selection for \gls{bmi}, but found significant enrichment for T2D. The genes associated with T2D have been found to be differentiated by population, however the individual \glspl{snp} are often not [@pickrell2009signals]. @Koh2014 identified 6 \glspl{snp} in or near 9 genes that had been reported as T2D associated and overlapped with evidence of positive selection in East Asian populations. Common variants that have been found in European populations associating with obesity don't replicate in the Samoan population [@Karns2012]. The non-replication of European variants in Polynesians and the high prevalence of obesity in Polynesians suggest there is likely to be 
 some population specific variants that are yet to be identified. Rare variants tend to be recent and therefore geographically restricted [@1KGP2012].
 
 Hyperuricaemia can be caused by diet, genetic predisposition or under-excretion of urate. The elevated uric acid levels in the blood contributes to the forming of urate crystals in the joints, triggering an inflammatory response by stimulating the synthesis and release of humoral and cellular inflammatory mediators [@Choi2005a]. There is a clear relationship between hyperuricaemia and the causal role in gout [@Snaith2004]. There is also an increased prevalence in gout in different ethnicities. New Zealand M$\bar{a}$ori and Pacific ethnicities have a prevalence of 12% and 14% respectively in males, compared to 4% in both European and Asian males [@Winnard2012; @Winnard2013]. While New Zealand M$\bar{a}$ori and Polynesians have an increased prevalence of hyperuricaemia, they also have a genetic predisposition to elevated urate and risk of gout  [@Hollis-Moffatt2009; @Hollis-Moffatt2011; @Phipps-Green2010]. The prevalence of metabolic syndrome in US gout patients is ~60%, or nearly 3 fold higher than US adults without gout [@Choi2007b].
