--- a/02-Methods.Rmd
+++ b/02-Methods.Rmd
@@ -100,7 +100,7 @@ SelectionTools v1.1 [@Cadzow2014] was used to generate the haplotypic selection 
 
 \gls{ihs}, \gls{nsl}, and \gls{xpehh} normalisation with frequency bins of 0.05 was done using _norm_ as part of selscan v1.1.0b [@Szpiech2014]. Markers with an \gls{ihs}, \gls{nsl} or \gls{xpehh} value > |2.6| were determined to be significant, which was approximately the most extreme 1% of values.
 
-Significant markers were also clustered into genomic regions using the DBSCAN package v1.1.1 [@dbscanref] in R, where nearby \gls{snp}s were assigned the same group identifier. The search radius used was 200 kb and the minimum number of points for a cluster was one. Cluster regions were created by taking both the minimum and maximum position for each group identifier, population, and chromosome.
+Significant markers were also clustered into genomic regions using the DBSCAN package v1.1.1 [@dbscanref] in R, where nearby \glspl{snp} were assigned the same group identifier. The search radius used was 200 kb and the minimum number of points for a cluster was one. Cluster regions were created by taking both the minimum and maximum position for each group identifier, population, and chromosome.
 
 
 
@@ -325,6 +325,8 @@ Custom Views were created to join the supplemental tables to the main tables.
 
 ### Principal component analysis {#pca}
 
+\Glsdesc{pca} is a statistical dimension reductionality technique that transforms potentially correlated variables into a linear and non-correlated set of variables. In a genetic context \gls{pca} is used to reduce variation at many thousands of markers into a handful of components that represent the majority of the variation of the data [@Patterson2006]. The components are ordered such that the first \gls{pc} captures the most variation, with each subsequent component capturing less. These components often, but not necessarily, represent population differences and population substructure.
+
 To calculate the principal components on the genetic data, all populations and chromosomes were combined into a single \gls{vcf} file with BCFtools v1.3.1 and then the independent markers were identified using Plink v1.9b4.9, using a sliding window to remove markers that had an R^2^ > 0.2, using windows of 50 kb and a slide of 5 markers. The first 10 principle components were calculated using smartPCA v13050 from Eigensoft v6.0.1 [@Price2006].
 
 ```{r eigenstrat code, engine='bash', eval = FALSE}
@@ -372,6 +374,8 @@ smartpca.perl \
 ```
 
 ### Admixture analysis {#admixture}
+
+> Admixture analysis is similar to \gls{pca}.
 
 Admixture analysis was performed using ADMIXTURE v1.3.0 [@Alexander2009]. \gls{vcf} files for all autosomes were concatenated and the independent markers were selected by a moving window of 50 kbp sliding by 10 markers and removing markers with an R^2^ of more that 0.1. This was done using Plink v1.9b4.9. Following this cross validation was performed to find the best value of K, for values of K from 1 to 15. K = 11 had the lowest cross-validation error (Table \@ref(tab:admixCV)).
 
@@ -621,7 +625,7 @@ Mean grandparent ancestry is the proportion of grandparents self-reported as bel
 The Infinium CoreExome-24 bead-chip is a genotyping platform available from Illumina and is comprised of a core set of 551,839 markers. Genotyping quality control was performed by Dr Tanya Major (Merriman Lab) following the protocol from @Guo2014 and the Illumina GenomeStudio best practice guidelines. Illumina’s GenomeStudio v2011.1 genotyping module v1.9.4 was used for the initial calling of genotypes. Samples were exported from Genome Studio that had a call rate > 98%, markers were removed if the callrate was < 95%. Individuals who had not reported their sex were assigned their genetic sex where possible. Individuals were removed where genetic and reported sex did not match. The cohort was checked for genotype consistency between duplicated markers, with duplicates subsequently removed. 
 <!-- Samples were also checked for outliers in heterozygosity and depression of genetic variation. -->
 
-Markers were subsetted to only include bi-allelic \gls{snp}s, with a final marker number of `r NROW(markers)` and density of `r  lapply(1:22, function(x){diff(markers %>% filter(chrom ==x) %>% arrange(chrom_start) %>% pull(chrom_start))}) %>% unlist() %>%  mean() %>% round_dp(., 0)` bp/marker. Relatedness between individuals was assessed through inheritance by state using Plink v1.9b3.32 and a pedigree of families created by Dr Tanya Major (Merriman lab) to identify family groups. Duplicates and first degree relations were excluded and single individuals were randomly selected from family groups identified through identity by state analysis. Hardy-Weinberg equilibrium of markers was checked for European, East Polynesian, and West Polynesian populations . Ethinicity was determined 3 or more grandparents self reported ethnicity) using an exact test in Plink v1.9b3b.32, and variants were removed if they had a Bonferroni multiple testing corrected P < 0.05. The genetic ancestry, determined through \gls{pca} (section \@ref(pca)), was compared with self reported ethnicity and individuals were removed where there was disagreement.
+Markers were subsetted to only include bi-allelic \glspl{snp}, with a final marker number of `r NROW(markers)` and density of `r  lapply(1:22, function(x){diff(markers %>% filter(chrom ==x) %>% arrange(chrom_start) %>% pull(chrom_start))}) %>% unlist() %>%  mean() %>% round_dp(., 0)` bp/marker. Relatedness between individuals was assessed through inheritance by state using Plink v1.9b3.32 and a pedigree of families created by Dr Tanya Major (Merriman lab) to identify family groups. Duplicates and first degree relations were excluded and single individuals were randomly selected from family groups identified through identity by state analysis. Hardy-Weinberg equilibrium of markers was checked for European, East Polynesian, and West Polynesian populations . Ethinicity was determined 3 or more grandparents self reported ethnicity) using an exact test in Plink v1.9b3b.32, and variants were removed if they had a Bonferroni multiple testing corrected P < 0.05. The genetic ancestry, determined through \gls{pca} (section \@ref(pca)), was compared with self reported ethnicity and individuals were removed where there was disagreement.
 
 
 
@@ -687,7 +691,7 @@ ce_pop_table <- ce_populations_table()
 
 #### Sample selection
 
-Principle components were calculated for all individuals genotyped on the coreExome \gls{snp} array using SmartPCA (EIGENSOFT v6.0.1, see section \@ref(pca)) using 2858 ancestry informative markers (@Guo2014 supplementary material). The first 10 eigenvectors were outputted, with no outlier removal or population size limit. Individuals were removed who did not match between self reported ethnicity of grandparents and their genetic ancestry, or if they had self reported their ethnicity as unknown.
+\Glsentrydescplural{pc} were calculated for all individuals genotyped on the coreExome \gls{snp} array using SmartPCA (EIGENSOFT v6.0.1, see section \@ref(pca)) using 2858 ancestry informative markers (@Guo2014 supplementary material). The first 10 eigenvectors were outputted, with no outlier removal or population size limit. Individuals were removed who did not match between self reported ethnicity of grandparents and their genetic ancestry, or if they had self reported their ethnicity as unknown.
 
 \Glsdesc{pc} 2 was identified as providing the best separation of European ancestry from Polynesian ancestry, and \gls{pc} 4 had the best separation of East Polynesian from West Polynesian populations. Individuals were then filtered for European or Polynesian ancestry. Individuals reporting 4 grandparents of Caucasian, New Zealand M$\bar{a}$ori, Cook Island M$\bar{a}$ori, Samoan, and Tongan ancestry were used to define the threshold values. The mean and SD for \gls{pc} 2 and \gls{pc} 4 were calculated for the individuals who had self reported four grandparents of the same ethnicity. Thresholds were then applied using the four grandparent population mean $\pm$ 2 SD for \gls{pc} 2 and \gls{pc} 4 for each corresponding self-report population group. Samples were filtered so that only those that lay within a boundary remained. Population samples of 100 individuals were created by using genetic ancestry for the following populations: \glsdesc{nzm}, \glsdesc{cim}, \glsdesc{sam}, \glsdesc{ton}, and \glsdesc{nzc}, by randomly sampling from within each ancestry group (Figure \@ref(fig:cePCA)). To unenrich for gout, individuals were prioritised based on gout affection to reach population specific prevalences based on @Winnard2013 of 2.3% for \gls{nzc}, 7.7% for \gls{nzm}, and 8.6% for \gls{cim}, \gls{sam}, and \gls{ton}. Final sample population prevalence of 2.0% (\gls{nzc}), 7.0% (\gls{nzm}), 45.0% (\gls{cim}), 12.0% (\gls{sam}), and 54.0% (\gls{ton}) were obtained (\@ref(tab:cePopTable)).
 
@@ -697,7 +701,7 @@ knitr::kable(data.frame(ce_pop_table), caption = '(\\#tab:cePopTable) Clinical i
 ```
  
 
-(ref:cePCA) Principle components 2 and 4 for individuals used in the selection analysis.
+(ref:cePCA) Principal components 2 and 4 for individuals used in the selection analysis.
 
 ```{r cePCA, fig.cap = '(ref:cePCA)', echo = FALSE, out.width = "70%"}
 knitr::include_graphics('images/02_methods/pca_plot.png')
@@ -707,7 +711,7 @@ knitr::include_graphics('images/02_methods/pca_plot.png')
 
 #### Filter individuals and markers 
 
-To create a data set to calculate selection statistics, the subset of the Genetics of Aotearoa individuals genotyped on the Illumina CoreExome chip were combined with all of the individuals in the \gls{1kgp} phase 3 release. Before the data sets could be combined there were a series of steps that were performed. The first step was to keep only the individuals who had been selected through \gls{pca} and had a genotyping rate of at least 95%. Markers were filtered to remove \gls{indel}s so that only \gls{snp}s remained.
+To create a data set to calculate selection statistics, the subset of the Genetics of Aotearoa individuals genotyped on the Illumina CoreExome chip were combined with all of the individuals in the \gls{1kgp} phase 3 release. Before the data sets could be combined there were a series of steps that were performed. The first step was to keep only the individuals who had been selected through \gls{pca} and had a genotyping rate of at least 95%. Markers were filtered to remove \glspl{indel} so that only \glspl{snp} remained.
 
 ```{r, engine = 'bash', eval = FALSE}
 parallel '
@@ -747,7 +751,7 @@ After normalisation, the \gls{vcf} files were phased using the 1000 Genomes Proj
 
 #### Merge genotypes
 
-In order to efficiently merge the data sets, the intersection of the markers from the \gls{1kgp} dataset and the CoreExome was found. This was done by extracting the marker positions and alleles from the coreExome data and then matching these to the marker positions extracted from the \gls{1kgp} phase 3. The \gls{1kgp} phase 3 markers were also filtered to remove non bi-allelic \gls{snp}s.
+In order to efficiently merge the data sets, the intersection of the markers from the \gls{1kgp} dataset and the CoreExome was found. This was done by extracting the marker positions and alleles from the coreExome data and then matching these to the marker positions extracted from the \gls{1kgp} phase 3. The \gls{1kgp} phase 3 markers were also filtered to remove non bi-allelic \glspl{snp}.
 
 ```{r, engine = 'bash', eval = FALSE}
 # extract markers from core exome
@@ -857,9 +861,9 @@ do
 done
 ```
 
-\Glsdesc{pc}s for the merged \gls{1kgp} data and the New Zealand samples showed in the first two components that the \gls{afr}, \gls{eur}, \gls{sas} super populations all formed separate groupings. \gls{eas} and \gls{pol} were extremely similar in \gls{pc} 1 but the \gls{pol} populations were spread with \gls{pc} 2, with the majority of the spread being accounted for by the Eastern Polynesian populations whereas the Western Polynesian populations had a tight grouping at -0.025 on \gls{pc} 2, slightly below the \gls{eas} group. This can be observed when PC6 is used to separate the Polynesian populations (Figure \@ref(fig:polPCA)).
+\Glsentrydescplural{pc} for the merged \gls{1kgp} data and the New Zealand samples showed in the first two components that the \gls{afr}, \gls{eur}, \gls{sas} super populations all formed separate groupings. \gls{eas} and \gls{pol} were extremely similar in \gls{pc} 1 but the \gls{pol} populations were spread with \gls{pc} 2, with the majority of the spread being accounted for by the Eastern Polynesian populations whereas the Western Polynesian populations had a tight grouping at -0.025 on \gls{pc} 2, slightly below the \gls{eas} group. This can be observed when PC6 is used to separate the Polynesian populations (Figure \@ref(fig:polPCA)).
 
-(ref:allpopPCA) Principle components 1 and 2 for all populations, coloured by super population grouping.
+(ref:allpopPCA) Principal components 1 and 2 for all populations, coloured by super population grouping.
 
 ```{r allpopPCA, fig.cap = '(ref:allpopPCA)', echo = FALSE}
 eigen <- read.table('~/data/NZ_coreExome_1kgp/PCA/indiv_pops/NZ_1KGP_allchr_indep_eigen.pca.evec', stringsAsFactors = FALSE)
@@ -869,7 +873,7 @@ names(eigen)[2:11] <- paste0("PC",1:10)
 eigen %>%  ggplot(., aes(x = PC1, y = PC2, colour = super_pop)) + geom_point() + theme_bw()  + guides(colour  = guide_legend(title = "Super Population"))
 ```
 
-(ref:eurPCA) Principle components 1 and 2 for populations of the European Super Population.
+(ref:eurPCA) Principal components 1 and 2 for populations of the European Super Population.
 
 ```{r eurPCA, fig.cap = '(ref:eurPCA)', echo = FALSE}
 #eigen %>%  filter(super_pop == 'EUR') %>% ggplot(., aes(x = PC1, y = PC2, colour = pop)) + geom_point() + theme_bw() + guides(colour  = guide_legend(title = "Population"))
@@ -877,7 +881,7 @@ eigen %>%  ggplot(., aes(x = PC1, y = PC2, colour = super_pop)) + geom_point() +
 eigen %>%  filter(super_pop == 'EUR') %>% ggplot(., aes(x = PC1, y = PC2, shape = pop, colour = super_pop)) + geom_point(size = 2) + theme_bw() + scale_color_manual(values = c(EUR = '#00BFC4')) + guides(shape  = guide_legend(title = "Population"), colour = guide_legend(title = "Super Population")) + scale_shape_manual(values = c(CEU = 0, NZC = 1, GBR = 2, IBS = 3, FIN = 4, TSI = 5))
 ```
 
-(ref:polPCA)  Principle components 2 and 6 for the Polynesian populations.
+(ref:polPCA)  Principal components 2 and 6 for the Polynesian populations.
 
 ```{r polPCA, fig.cap = '(ref:polPCA)', echo = FALSE}
 eigen %>%  filter(super_pop == 'POL') %>% ggplot(., aes(x = PC6, y = PC2, shape = pop, colour = super_pop)) + geom_point(size = 2) + theme_bw() + scale_color_manual(values = c(POL = '#619CFF')) + scale_shape_manual(values = c("CIM" = 0,"NZM" = 1, "TON" = 2, "SAM" = 3)) + guides(size = FALSE) + guides(shape  = guide_legend(title = "Population"), colour = guide_legend(title = "Super Population"))
