--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -95,7 +95,7 @@ Tajima's _D_, Fay and Wu's _H_, Fu and Li's _F_, Zeng's _E_, and F~ST~ were all 
 
 ### Extended haplotype homozygosity {#haplocluster}
 
-\glsdesc{ihs} and \gls{nsl} were calculated and normalised using selscan v1.1.0b [@Szpiech2014] as part of the selectionTools 1.1 [@Cadzow2014] pipeline, as described in Section \@ref(selectionTools). Markers with an \gls{ihs} or \gls{nsl} value that was determined to be significant using a significance threshold of 1% were clustered into genomic regions using the DBSCAN package v1.1.1 [@dbscanref] in R where nearby \gls{snp}s were assigned the same group identifier. The search radius used was 200 kb and the minimum number of points for a cluster was one. Cluster regions were created by taking both the minimum and maximum position for each group identifier, population and chromosome. The distance matrix was the result of calculating (A $\cap$ B)/ A and (A $\cap$ B) / B, where A $\cap$ B was the sum of the intersection of clustered regions between population A and population B, and A and B was the sum of the clustered regions for population A and population B respectively. Hierarchical clustering was then performed using Euclidean distance as the distance measure, and complete linkage for the linkage criteria.
+\glsdesc{ihs} and \gls{nsl} were calculated and normalised using selscan v1.1.0b [@Szpiech2014] as part of the selectionTools 1.1 [@Cadzow2014] pipeline, as described in Section \@ref(selectionTools). Markers with an \gls{ihs} or \gls{nsl} value that was determined to be significant using a significance threshold of 1% were clustered into genomic regions using the DBSCAN package v1.1.1 [@dbscanref] in R where nearby \glspl{snp} were assigned the same group identifier. The search radius used was 200 kb and the minimum number of points for a cluster was one. Cluster regions were created by taking both the minimum and maximum position for each group identifier, population and chromosome. The distance matrix was the result of calculating (A $\cap$ B)/ A and (A $\cap$ B) / B, where A $\cap$ B was the sum of the intersection of clustered regions between population A and population B, and A and B was the sum of the clustered regions for population A and population B respectively. Hierarchical clustering was then performed using Euclidean distance as the distance measure, and complete linkage for the linkage criteria.
 
 ### Pathway enrichment analysis
 
@@ -883,7 +883,7 @@ n_disease_pol_kd <- NROW(reduce(subsetByOverlaps(c(gr[grep(x = gr$pop,  pattern 
 n_disease_pol_metsyn <- NROW(reduce(subsetByOverlaps(c(gr[grep(x = gr$pop,  pattern = 'POL')],gr2[grep(x = gr2$pop,  pattern = 'POL')]), metsyn_GR)))
 ```
 
-In the clustered significant regions of both \gls{ihs} and \gls{nsl} there were `r n_regions_ihs_nsl` independent regions that overlapped with genes associated with urate and metabolic diseases from all populations, for Polynesian populations the number of regions was `r n_regions_pol_ihs_nsl`. \gls{ihs} had `r n_regions_ihs` regions, while \gls{nsl} had `r n_regions_nsl`, and in common between the two statistics were `r n_regions_ihs_nsl_intersect` regions. The regions of the Polynesian populations covered `r n_pol_snps_ihs` \gls{snp}s for \gls{ihs} and `r n_pol_snps_nsl` for \gls{nsl}, with `r n_pol_snps_ihs_nsl ` in common between them. For the genes that had significant regions in Polynesian populations, `r n_disease_pol_urate` regions intersected genes that had been assosciated with urate and gout, `r n_disease_pol_obesity` with obesity, `r n_disease_pol_t2d` with \gls{t2d}, `r n_disease_pol_kd` with kidney disease, and `r n_disease_pol_metsyn` with metabolic syndrome.
+In the clustered significant regions of both \gls{ihs} and \gls{nsl} there were `r n_regions_ihs_nsl` independent regions that overlapped with genes associated with urate and metabolic diseases from all populations, for Polynesian populations the number of regions was `r n_regions_pol_ihs_nsl`. \gls{ihs} had `r n_regions_ihs` regions, while \gls{nsl} had `r n_regions_nsl`, and in common between the two statistics were `r n_regions_ihs_nsl_intersect` regions. The regions of the Polynesian populations covered `r n_pol_snps_ihs` \glspl{snp} for \gls{ihs} and `r n_pol_snps_nsl` for \gls{nsl}, with `r n_pol_snps_ihs_nsl ` in common between them. For the genes that had significant regions in Polynesian populations, `r n_disease_pol_urate` regions intersected genes that had been assosciated with urate and gout, `r n_disease_pol_obesity` with obesity, `r n_disease_pol_t2d` with \gls{t2d}, `r n_disease_pol_kd` with kidney disease, and `r n_disease_pol_metsyn` with metabolic syndrome.
 
 ```{r, message=FALSE, warning=FALSE}
 shared_ihs_pol_disease_snps <- left_join(bind_rows(disease_ihs_snps) %>% filter(superpop == "POL") %>% select(seqnames, start, end) %>% distinct(), bind_rows(disease_ihs_snps), by =c("seqnames", "start","end")) %>% select(-genename, -width, -strand) %>% distinct() %>% group_by(seqnames, start, end) %>% mutate(n = n()) %>% filter(n > 1) %>% arrange(desc(n))
@@ -911,11 +911,11 @@ shared_ihs_nsl_pol_disease_snps_intersect <- shared_ihs_nsl_pol_disease_snps %>%
 ```
 
 
-Using the significant \gls{snp}s for these \gls{ihs} and \gls{nsl} (as in Chapter 3) there were a total of `r shared_ihs_pol_disease_snps %>% select(seqnames, start, end) %>% distinct() %>% NROW()` \gls{snp}s that were significant in a Polynesian population and also significant in at least one other population for \gls{ihs}, and `r shared_nsl_pol_disease_snps %>% select(seqnames, start, end) %>% distinct() %>% NROW()` for \gls{nsl}. The number of \gls{snp}s that were significant in both \gls{ihs} and \gls{nsl} in the Polynesian population was `r shared_ihs_nsl_pol_disease_snps_intersect %>% select(seqnames, start, end) %>% distinct() %>% NROW()`
+Using the significant \glspl{snp} for these \gls{ihs} and \gls{nsl} (as in Chapter 3) there were a total of `r shared_ihs_pol_disease_snps %>% select(seqnames, start, end) %>% distinct() %>% NROW()` \glspl{snp} that were significant in a Polynesian population and also significant in at least one other population for \gls{ihs}, and `r shared_nsl_pol_disease_snps %>% select(seqnames, start, end) %>% distinct() %>% NROW()` for \gls{nsl}. The number of \glspl{snp} that were significant in both \gls{ihs} and \gls{nsl} in the Polynesian population was `r shared_ihs_nsl_pol_disease_snps_intersect %>% select(seqnames, start, end) %>% distinct() %>% NROW()`
 
 The urate associated gene _ABCG2_ had a single \gls{snp} (rs2622626) that was significant in \gls{ton} that was in common for significance for \gls{ihs} in two other populations, \gls{gih} and \gls{itu}, both were from the \gls{sas} super population. The situation was the same for \gls{nsl}, but with the addition of \gls{jpt}.
 
-The \gls{sam} and \gls{ton} populations had multiple \gls{snp}s in common that were significant for both \gls{ihs} and \gls{nsl}. An example is in _LRP1B_, where there were three \gls{snp}s: rs10173806, rs4591293, and rs2890615. Rs2890615 was also significant in \gls{esn} and \gls{chs}.
+The \gls{sam} and \gls{ton} populations had multiple \glspl{snp} in common that were significant for both \gls{ihs} and \gls{nsl}. An example is in _LRP1B_, where there were three \glspl{snp}: rs10173806, rs4591293, and rs2890615. Rs2890615 was also significant in \gls{esn} and \gls{chs}.
 
 
 
@@ -924,7 +924,7 @@ _ERBB4_ had a single significant \gls{snp}, rs6707285, in \gls{sam}, and was als
 <!-- pickrell ERBB4 in eas, sas, and mideas, oceania. FHIT in bantu -->
 
 
-One of the main regions (chr20:33470694-34556005) had 11 significant \gls{snp}s in Polynesian populations as well as up to 16 other populations, contained the obesity-associated gene _GDF5_ and the neighbouring genes of _CEP250_ and _UQCC1._ The majority of the significant \gls{snp}s were for the ancestral allele. Both rs1570841 and rs4911502  were significant in the populations of \gls{amr} (\gls{clm}, \gls{mxl} and \gls{pur}), \gls{eas} (\gls{cdx}, \gls{chb}, \gls{chs}, \gls{jpt}, and \gls{khv}), \gls{eur} (\gls{ceu}, \gls{fin}, \gls{gbr}, \gls{ibs}), \gls{pol} (\gls{cim}, \gls{nzm}, and \gls{ton}), and \gls{sas} (\gls{beb} and \gls{itu}. Both \gls{snp}s were for the ancestral allele. Four \gls{snp}s ,rs4911178, rs4911494, rs6087704, and rs6087704, intersected both _GDF5_ and _UQCC1_, and were significant for the derived alleles in the \gls{cim} and \gls{jpt} populations.
+One of the main regions (chr20:33470694-34556005) had 11 significant \glspl{snp} in Polynesian populations as well as up to 16 other populations, contained the obesity-associated gene _GDF5_ and the neighbouring genes of _CEP250_ and _UQCC1._ The majority of the significant \glspl{snp} were for the ancestral allele. Both rs1570841 and rs4911502  were significant in the populations of \gls{amr} (\gls{clm}, \gls{mxl} and \gls{pur}), \gls{eas} (\gls{cdx}, \gls{chb}, \gls{chs}, \gls{jpt}, and \gls{khv}), \gls{eur} (\gls{ceu}, \gls{fin}, \gls{gbr}, \gls{ibs}), \gls{pol} (\gls{cim}, \gls{nzm}, and \gls{ton}), and \gls{sas} (\gls{beb} and \gls{itu}. Both \glspl{snp} were for the ancestral allele. Four \glspl{snp} ,rs4911178, rs4911494, rs6087704, and rs6087704, intersected both _GDF5_ and _UQCC1_, and were significant for the derived alleles in the \gls{cim} and \gls{jpt} populations.
 
 <!-- CEP250 -->
 <!--   - rs1570841 3 AMR, 5 EAS, 4 EUR, 3 POL, 2 SAS -ve -->
@@ -1852,7 +1852,7 @@ However, compared to the entire chromosome summaries, using windows from the ext
 
 Clustering from gene lists for the frequency spectrum based selection and neutrality statistics consistently grouped the individual populations into their super populations although there was inconsistency for the \gls{amr} populations. With the exception of the \gls{amr} populations, the clustering of populations using windows or haplotypes was consistent with previously reported results [@1KGP2015snp; @pickrell2009signals]. The grouping of populations was also seen with random lists of genes. This would indicate that the commonalities with populations for a gene are not specific to a disease, but instead, a general gene similarity.
 
-Allele sharing between populations is moderate for common \gls{snp}s, and more so for continental groups, but is minimal for rarer frequencies, due to population divergence [@Gravel2011]. This helps to explain both of the patterns observed with \gls{sfs} based statistics for both the extremes and gene clustering. With the extremes, many of the super populations had windows that were not in the extremes of the other populations, these formed the 'blocks' in the heatmap. This was most evident with the \gls{afr} populations, which had a the majority of windows for each statistic not in common with the extremes from the other populations. And with the gene clustering it was again seen 
+Allele sharing between populations is moderate for common \glspl{snp}, and more so for continental groups, but is minimal for rarer frequencies, due to population divergence [@Gravel2011]. This helps to explain both of the patterns observed with \gls{sfs} based statistics for both the extremes and gene clustering. With the extremes, many of the super populations had windows that were not in the extremes of the other populations, these formed the 'blocks' in the heatmap. This was most evident with the \gls{afr} populations, which had a the majority of windows for each statistic not in common with the extremes from the other populations. And with the gene clustering it was again seen 
 
 The extremes of the distributions represent different types of selection or demographic events and are different depending on the selection test statistic being used [@Tajima1989; @fay2000hitchhiking; @Fu1993; @Zeng2006]. The upper end of the distribution is able to be compared as all of the values that it encompassed were positive in value across all populations for all statistics and represent the same types of selection or demography.
 
@@ -1885,7 +1885,7 @@ _intro_
 
 Under a neutral model the differences in allele frequency are due to genetic drift [@kimura1979neutral]. Demographic events such as bottleneck, migration, expansion, and admixture also contribute to the differences in allele frequencies found between populations [@Wright1951]. Selection on the other hand acts in a targeted manner so therefore if the selection occurred post population split then it would be expected to look neutral in one population but not in the other. However, if the selective event happened in an ancestral population of the two then dependent on time since divergence, it would be expected to be observed in both populations [@Hermisson2017]. It is also possible to have 'parallel' selection, where both populations experience independent selection [@Tennessen2011]. 
 
-The current metabolic disease burden in the Polynesian populations is higher than other populations [@ref]. This higher disease burden could possibly have arisen due to environmental changes and  selective pressure on the Polynesian populations after the migration into the Pacific. As found in Chapter 3, however, there was limited evidence for selection, especially in the overlap between haplotypic and \gls{sfs} based methodologies, in the genes that were associated with urate and associated metabolic diseases (Table \@ref(tab:superDiseaseGenesTab)). Three approaches were taken to investigate the potential of a 'shared selective' history of the loci associated with urate and metabolic disease. These included, investigating the loci that were in either the 1st or 99th percentile, the loci that were in the clustered regions for the significant \gls{snp}s of the haplotypic statistics, \gls{ihs} and \gls{nsl}. And finally, hierarchical clustering of the median centred values for windows that intersected the loci associated with urate and metabolic disease.
+The current metabolic disease burden in the Polynesian populations is higher than other populations [@ref]. This higher disease burden could possibly have arisen due to environmental changes and  selective pressure on the Polynesian populations after the migration into the Pacific. As found in Chapter 3, however, there was limited evidence for selection, especially in the overlap between haplotypic and \gls{sfs} based methodologies, in the genes that were associated with urate and associated metabolic diseases (Table \@ref(tab:superDiseaseGenesTab)). Three approaches were taken to investigate the potential of a 'shared selective' history of the loci associated with urate and metabolic disease. These included, investigating the loci that were in either the 1st or 99th percentile, the loci that were in the clustered regions for the significant \glspl{snp} of the haplotypic statistics, \gls{ihs} and \gls{nsl}. And finally, hierarchical clustering of the median centred values for windows that intersected the loci associated with urate and metabolic disease.
 
 _clustering on median values_
 
@@ -1895,11 +1895,11 @@ The simplest explanation similar clustering occurred with the gene lists is that
 
 The differences in the extremes of the distributions for the site-frequency spectrum statistics showed that they could be used to cluster the populations into their super populations. The differences and commonalities in the genes that had evidence of association with a metabolic disease, in the 1st percentiles of the statistics for the Polynesian populations, were relatively isolated to only the Polynesian populations. The windows that were in common with other populations were for the most part, only found in the populations of \gls{eas}.
 
-The windows or \gls{snp}s that were significant in the Polynesian populations within the metabolic disease gene lists were usually limited to commonality with the paired ancestrally similar population (\gls{cim} and \gls{nzm}, or \gls{sam} and \gls{ton}). Windows were more likely to be in common between populations for the 99th percentiles where this represented an increase in high frequency variants.
+The windows or \glspl{snp} that were significant in the Polynesian populations within the metabolic disease gene lists were usually limited to commonality with the paired ancestrally similar population (\gls{cim} and \gls{nzm}, or \gls{sam} and \gls{ton}). Windows were more likely to be in common between populations for the 99th percentiles where this represented an increase in high frequency variants.
 
 > For the haplotypic statistics, the regions that were in common between the Polynesian populations...
 
-With the haplotypic statistics there were commonalities between some of the significant \gls{snp}s. The \gls{snp}s that were in common were more often in pairs of either \gls{sam} and \gls{ton}, or \gls{cim} and \gls{nzm}. The \gls{snp}s that were significant for a Polynesian population were more likely to have also been significant in an \gls{eas} population than the other super populations.
+With the haplotypic statistics there were commonalities between some of the significant \glspl{snp}. The \glspl{snp} that were in common were more often in pairs of either \gls{sam} and \gls{ton}, or \gls{cim} and \gls{nzm}. The \glspl{snp} that were significant for a Polynesian population were more likely to have also been significant in an \gls{eas} population than the other super populations.
 
 ```{r, eval = FALSE}
 bind_rows(fwh_pos_pol_genes %>% filter(SYMBOL %in% genelists$genename) %>% select(contains('chrom'), SYMBOL, contains("sum"), contains('POL')) %>% mutate(stat = "FWH_pos", dir = 1),
@@ -1969,14 +1969,14 @@ The cutree method also required that K clusters be returned regardless of what t
 
 The only statistic that consistently did not cluster the Polynesian populations was \gls{flf}. \Gls{flf} is based on singletons and for the clustering of one the windows in the extremes had sparse matrix of windows that were in common between populations in lower tail. The sparsity of the matrix influenced how well the clustering performed due to the lack of windows that were in common between any pair of populations. At the extremes of similarity (e.g. very similar or very dissimilar), the clusters are determined by only a few differences which means a large amount of information was not being used for the differentiation of populations. As the lower tail represents and excess of singletons this is likely to have been impacted by using chip data as there was a very strong bias against singletons during the quality control protocol [@Guo2014]. In this situation because the data has reduced singletons, the distribution for \gls{flf} was shifted to the right, with the upper tail representing a deficit of singletons [@Fu1993]. This shift now means there is an under representation of regions in the lower tail.
 
-As reported in section \@ref(fdrresults), only the \gls{fdr} for the Polynesian populations was below 10% for the 1^st^ percentiles of \gls{td} and \gls{fwh} for the frequency spectrum based statistics. This means that while the extremes would be considered the most likely ends of the distribution that would contain regions of the genome that had been selected, it cannot with confidence be claimed. Therefore the mechanism through which they became the extremes of the distribution is possibly through selection, however, other neutrality mechanisms are still valid. While it is true that the extremes may include selected loci, it is also true that because of the use of a distribution proportion threshold, there will always be a windows or \gls{snp}s that would be identified as possibly being under selection (the empirical dist paper would possibly be a good reference here). This means that while there were similarities in the extremes of the distributions for the frequency based statistics, they are not necessarily under selection and based on the \gls{fdr} calculated from the permutations, likely to be false positives.
+As reported in section \@ref(fdrresults), only the \gls{fdr} for the Polynesian populations was below 10% for the 1^st^ percentiles of \gls{td} and \gls{fwh} for the frequency spectrum based statistics. This means that while the extremes would be considered the most likely ends of the distribution that would contain regions of the genome that had been selected, it cannot with confidence be claimed. Therefore the mechanism through which they became the extremes of the distribution is possibly through selection, however, other neutrality mechanisms are still valid. While it is true that the extremes may include selected loci, it is also true that because of the use of a distribution proportion threshold, there will always be a windows or \glspl{snp} that would be identified as possibly being under selection (the empirical dist paper would possibly be a good reference here). This means that while there were similarities in the extremes of the distributions for the frequency based statistics, they are not necessarily under selection and based on the \gls{fdr} calculated from the permutations, likely to be false positives.
 
 A limitation was also some of the lack of 'internal replication' i.e. the Eastern and Western Polynesian pairs, where a region would only meet the threshold for significance in a single population and not in its paired population.
 
 The rightwards shift in the distributions of \gls{td}, \gls{flf}, and \gls{ze}, largely is influenced by the low frequency and singletons being under-represented. This shift was more noticeable in the \gls{afr} populations with the 1st percentile being above zero for \gls{td} and \gls{flf}. This meant that the windows that were being compared were not always the going to be inferring the type of selection or population demographic events as those that were from below zero. The rightward shift won't affected all genes in a uniform manner - the impact will be different for different genes, based on the frequency of the markers in them. This means that it can't be assumed that the genes in the 1st percentile for the \gls{afr} populations are the equivalent in terms of ranking by statistic value, than those of the other populations. Nor can it be assumed that the distribution that was observed using the markers from the CoreExome would be the same that would be observed from using sequencing data.
 
 
-Grouping based on the clustering of the significant results in \gls{ihs} or \gls{nsl} may falsely link \gls{snp}s into a 'region of significance'. The 200 kb limit was the maximum distance that selscan by default would allow the calculation of the extended haplotype heterozygosity to extend across a gap of information before terminating.  The calculation of region sharing also does not take into account the directionality of the selection, i.e. one population might have favoured the ancestral allele, whereas a second favoured the derived allele, the region sharing calculation treats these the same and would consider them a shared region.
+Grouping based on the clustering of the significant results in \gls{ihs} or \gls{nsl} may falsely link \glspl{snp} into a 'region of significance'. The 200 kb limit was the maximum distance that selscan by default would allow the calculation of the extended haplotype heterozygosity to extend across a gap of information before terminating.  The calculation of region sharing also does not take into account the directionality of the selection, i.e. one population might have favoured the ancestral allele, whereas a second favoured the derived allele, the region sharing calculation treats these the same and would consider them a shared region.
 
 
 <!-- - the fact it was a chip -> ascertainment bias -->
