--- a/glossary/glossary.tex
+++ b/glossary/glossary.tex
@@ -39,7 +39,8 @@
 
 \newacronym[description={False discovery rate}]{fdr}{FDR}{false discovery rate}
 
-\newacronym[description={Principle components analysis}]{pca}{PCA}{principle components analysis}
+\newacronym[description={Principal component analysis}]{pca}{PCA}{principal component analysis}
+\newacronym[description={Principal component}, descriptionplural={Principal components}]{pc}{PC}{principal component}
 
 \newacronym[description={Variant call format}]{vcf}{VCF}{variant call format}
 
@@ -55,6 +56,8 @@
 
 \newacronym[description={New Zealand}]{nz}{NZ}{New Zealand}
 \newacronym[description={Single nucleotide polymorphism}]{snp}{SNP}{single nucleotide polymorphism}
+%\newacronym[plural={cM}, \glsshortpluralkey={cM}]{cM}{cM}{centiMorgan} 
+
 \newacronym[description={Site frequency spectrum}]{sfs}{SFS}{site frequency spectrum}
 %\newacronym[description={Cook Island M\={a}ori}]{cim}{CIM}{Cook Island M\={a}ori}
 %\newacronym[description={New Zealand M\={a}ori}]{nzm}{NZM}{New Zealand M\={a}ori}
