--- a/05-Selection_and_association.Rmd
+++ b/05-Selection_and_association.Rmd
@@ -149,7 +149,7 @@ There were a total of `r ukbio_gout %>% filter(goutaff ==1) %>% NROW()` individu
 
 
 
-A \gls{gwas} was performed using logisitic regression in Plink1.9b [@plink] for each gout classification, with age, sex, and \gls{bmi} as co-variates. The association results for each \gls{gwas} were then compared with the \gls{snp}s reported in Table 1 of @Kottgen2013. 
+A \gls{gwas} was performed using logisitic regression in Plink1.9b [@plink] for each gout classification, with age, sex, and \gls{bmi} as co-variates. The association results for each \gls{gwas} were then compared with the \glspl{snp} reported in Table 1 of @Kottgen2013. 
 
 For each gout classification, the genetic component of heritability explained was calculated. This was done by first randomly selected 10,000 controls and then combining this same subset with cases from each of the gout classifications. The genetic variance was calculated for each chromosome separately and then combined. The dichotomous case-control phenotype was transformed onto the continuous liability scale using the restricted maximum likelihood analysis in gcta and a general population prevalence of gout of 2% (\@ref(gctaHeritability)). 
 
@@ -158,7 +158,7 @@ kot_t1 <- read.csv("~/data/kottgen_table1.csv", header = TRUE, stringsAsFactors 
 uk_kot_t1 <-read_delim(file = 'data/Ukbiobank/kottgen_t1_age_sex_bmi_results.txt', delim = '\t', col_names = c("file","SNP","POS","A1","TEST","NMISS","OR", "SE", "L95", "U95", "STAT", "P")) %>% separate(file, c("file","CHR"), sep = ':') %>% mutate(file = stringi::stri_replace(file, "selfult", regex ="self_ult" ))%>%  mutate(gout = map_chr(stringi::stri_split(file, regex = "_"), 1) %>% stringi::stri_sub(9)) %>% left_join(., kot_t1 %>% select(SNP, grail_gene), by = "SNP")
 ```
 
-(ref:kotplot) Plot showing ORs (95% CI) for the 30 \gls{snp}s reported in @Kottgen2013 based on gout definitions. Original Kottgen reported ORs are shown as red circles.
+(ref:kotplot) Plot showing ORs (95% CI) for the 30 \glspl{snp} reported in @Kottgen2013 based on gout definitions. Original Kottgen reported ORs are shown as red circles.
 
 ```{r kotplot, fig.height=7, fig.cap = '(ref:kotplot)', warning = FALSE}
 
@@ -250,7 +250,7 @@ txdb_gene_annotate(dat %>%  filter(P < 1e-8, nchar(A1) ==1 ) %>% mutate(chrom = 
 
 - self
 
-There were ```r self_asb %>% filter(P < 1e-8,  nchar(A1) ==1) %>% mutate(P = format(P, scientific = TRUE)) %>% tally()``` \gls{snp}s that met the genome-wide significance threshold. 
+There were ```r self_asb %>% filter(P < 1e-8,  nchar(A1) ==1) %>% mutate(P = format(P, scientific = TRUE)) %>% tally()``` \glspl{snp} that met the genome-wide significance threshold. 
 
 ```{r}
 self_asb %>% filter(P < 1e-8,  nchar(A1) ==1) %>% mutate(P = format(P, scientific = TRUE)) %>% dim()# kable()
